--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://my_host:my_port/cats
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://aiven-java-mysql-workshop-kumar-d59f.a.aivencloud.com:25928/cats
 spring.datasource.username=avnadmin
-spring.datasource.password=mypassword
+spring.datasource.password=AVNS_nZOoqcmVXXLtttrfP7V
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.show-sql=true
+spring.jpa.show-sql=true
